# cloudflare-ddns-traefik-plugin

./: .env.example  .traefik.yml  Dockerfile  Dockerfile.sync  README.md  cloudflare.go  cloudflare_test.go  docker-compose.sync.yml  go.mod  plugin.go  plugin_test.go  pyproject.toml  requirements.txt
.github/workflows/: release-images.yml
app/: __init__.py  cloudflare_client.py  config.py  ip_resolver.py  main.py  sync_engine.py  traefik_parser.py
cmd/ddns-traefik-sync/: main.go
ddns_traefik_sync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
docs/: docker-mode.md  plugin-mode.md
example-configs/: http.yml  tcp.yml
tests/: test_cloudflare_client.py  test_ip_resolver.py  test_main_integration.py  test_sync_engine.py  test_traefik_parser.py
